refactor-SCRUM-69: Replace waitTimer with Cooldown class